5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1811_2563.log
== TEST (2019-06-11 18:47:24) 
-- CODE:
from mumpy impor*
mf=array(eval(input("vetro de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	
	for v in mf:
		if (mf[i]>=5 and mf[i<7]):
			apro= apro + 1
			i= i + 1
		else:
			i = i + 1
	 
	print(apro)
			
-- ERROR:
File "XXXX", line 1
    from mumpy impor*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:47:42) 
-- CODE:
from numpy impor*
mf=array(eval(input("vetro de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	
	for v in mf:
		if (mf[i]>=5 and mf[i<7]):
			apro= apro + 1
			i= i + 1
		else:
			i = i + 1
	mf=array(eval(input("vetro de notas finais: ")))
	 
	print(apro)
			
-- ERROR:
File "XXXX", line 1
    from numpy impor*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:48:02) 
-- CODE:
from numpy import*
mf=array(eval(input("vetro de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	
	for v in mf:
		if (mf[i]>=5 and mf[i<7]):
			apro= apro + 1
			i= i + 1
		else:
			i = i + 1
	mf=array(eval(input("vetro de notas finais: ")))
	 
	print(apro)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:18) 
-- CODE:
from numpy import*
mf=array(eval(input("vetro de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	
	for v in mf:
		if (mf[i]>=5 and mf[i]<7):
			apro= apro + 1
			i= i + 1
		else:
			i = i + 1
	mf=array(eval(input("vetro de notas finais: ")))
	 
	print(apro)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:49:45) 
-- CODE:
from numpy import*
mf=array(eval(input("vetro de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	
	for v in mf:
		if (mf[i]>=5 and mf[i]<7):
			apro= apr + 1
			i= i + 1
		else:
			i = i + 1
	mf=array(eval(input("vetro de notas finais: ")))
	 
	print(apr)
			
-- EXECUTION TIME:
1.04358
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
0
0
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
0
0
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
vetro de notas finais: vetro de notas finais: 0
vetro de notas finais: 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:50) 
-- CODE:
from numpy import*
mf=array(eval(input("vetro de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	
	for v in mf:
		if (mf[i]>=5 and mf[i]<7):
			apro= apr + 1
			i= i + 1
		else:
			i = i + 1
	mf=array(eval(input("vetro de notas finais: ")))
	 
	print(apr)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:50:24) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	
	for v in mf:
		if (mf[i]>=5 and mf[i]<7):
			apro= apr + 1
			i= i + 1
		else:
			i = i + 1
	mf=array(eval(input("vetro de notas finais: ")))
	 
	print(apr)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:51:25) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	for v in mf:
		if (mf[i]>=5 and mf[i]<7):
			apro= apr + 1
			i= i + 1
		else:
			i = i + 1
	mf=array(eval(input("vetro de notas finais: ")))
	 
	print(apr)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:52:15) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	for v in mf:
		if (mf[i]>=5 and mf[i]<7):
			apro= apr + 1
			i= i + 1
		else:
			i = i + 1
	
	print(apr)
	mf=array(eval(input("vetor de notas finais: ")))
	
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:52:17) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	for v in mf:
		if (mf[i]>=5 and mf[i]<7):
			apro= apr + 1
			i= i + 1
		else:
			i = i + 1
	
	print(apr)
	mf=array(eval(input("vetor de notas finais: ")))
	
			
-- EXECUTION TIME:
1.02723
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
0
0
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
vetor de notas finais: 0
vetor de notas finais: 0
vetor de notas finais: 0
vetor de notas finais:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
vetor de notas finais: 0
vetor de notas finais: 0
vetor de notas finais:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:54:23) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	for v in mf:
		if (mf[i]>=5 and mf[i]<7):
			apr= apr + 1
			i= i + 1
		else:
			i = i + 1
	
	print(apr)
	mf=array(eval(input("vetor de notas finais: ")))
	
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:54:33) 
-- CODE:
from numpy import*
mf=array(eval(input("vetor de notas finais: ")))

while (size(mf)>1):
	i=0
	apr=0
	for v in mf:
		if (mf[i]>=5 and mf[i]<7):
			apr= apr + 1
			i= i + 1
		else:
			i = i + 1
	
	print(apr)
	mf=array(eval(input("vetor de notas finais: ")))
	
			
-- EXECUTION TIME:
0.85827
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
